# esp-homekit-sdk-rs

./: .env  .gitignore  Cargo.toml  README.md  build.rs
src/: accessory.rs  hap.rs  lib.rs  service.rs  task.rs
src/include/: bindings.h
