[package]
name = "esp-homekit-sdk-sys"
version = "0.1.0"
authors = ["Philipp Scheff <philippscheff@me.com>"]
edition = "2018"
links = "esp_homekit_sdk"

[features]
default = ["std"]

std = ["embedded-svc/std"]

[dependencies]
embedded-svc = "0.8.3"
log = "0.4"

[build-dependencies]
anyhow = "1"
dotenv = "0.15"
embuild = "0.23"
walkdir = "2.3.2"

